--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -50,7 +50,6 @@ jobs:
           echo "IMAGE_TAG_PATH=${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_REPOSITORY }}/${{ env.GCP_SERVICE_NAME }}/${{ env.GCP_SERVICE_NAME }}:${{ github.sha }}" >> $GITHUB_ENV
           echo "IMAGE_LAST_PATH=${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_REPOSITORY }}/${{ env.GCP_SERVICE_NAME }}/${{ env.GCP_SERVICE_NAME }}:latest" >> $GITHUB_ENV
           echo "SERVICE_NAME=${{ env.GCP_SERVICE_NAME }}-prd" >> $GITHUB_ENV
-          
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -69,29 +68,29 @@ jobs:
       - name: Configure Docker
         run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev --quiet
 
-#      - name: Docker Auth
-#        id: docker-auth
-#        uses: 'docker/login-action@v3'
-#        with:
-#          registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
-#          username: _json_key
-#          password: ${{ secrets.GCP_SA_KEY }}
-#
-#      - name: Build Docker image
-#        env:
-#          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
-#        run: |
-#          echo "Building Docker image: $IMAGE_NAME"
-#          docker build -t $IMAGE_NAME -f Dockerfile .
-#
-#      - name: Push Docker image to Artifact Registry
-#        env:
-#          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
-#        run: |
-#          echo "Pushing Docker image: $IMAGE_NAME"
-#          docker push $IMAGE_NAME
+      - name: Docker Auth
+        id: docker-auth
+        uses: 'docker/login-action@v3'
+        with:
+          registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
+          username: _json_key
+          password: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Create or Update Secret in Secret Manager
+      - name: Build Docker image
+        env:
+          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
+        run: |
+          echo "Building Docker image: $IMAGE_NAME"
+          docker build -t $IMAGE_NAME -f Dockerfile .
+
+      - name: Push Docker image to Artifact Registry
+        env:
+          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
+        run: |
+          echo "Pushing Docker image: $IMAGE_NAME"
+          docker push $IMAGE_NAME
+
+      - name: Create or Update Config Secret in Secret Manager
         run: |
           echo "Checking for secret: ${{ env.SERVICE_NAME }} in project ${{ env.GCP_PROJECT_ID }}"
           if ! gcloud secrets describe ${{ env.SERVICE_NAME }} --project="${{ env.GCP_PROJECT_ID }}" --quiet &> /dev/null; then
@@ -108,3 +107,20 @@ jobs:
             --data-file=- \
             --project="${{ env.GCP_PROJECT_ID }}" --quiet
           echo "Latest version of secret ${{ env.SERVICE_NAME }} updated."
+
+      - name: Deploy to Cloud Run
+        env:
+          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
+        run: |
+          echo "Deploying image $IMAGE_NAME to Cloud Run service ${{ env.SERVICE_NAME }}"
+          gcloud run deploy ${{ env.SERVICE_NAME }} \
+            --image ${{ env.IMAGE_NAME }} \
+            --region ${{ env.CLOUD_RUN_REGION }} \
+            --platform managed \
+            --allow-unauthenticated \
+            --port 8080 \
+            --set-secrets /app/config.yaml=${{ env.SERVICE_NAME }}:latest \
+            --set-env=PATH_CONFIG=/app \
+            --project ${{ env.GCP_PROJECT_ID }} \
+            --quiet
+          echo "Deployment to ${{ env.SERVICE_NAME }} completed."
