--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -68,27 +68,27 @@ jobs:
       - name: Configure Docker
         run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev --quiet
 
-      - name: Docker Auth
-        id: docker-auth
-        uses: 'docker/login-action@v3'
-        with:
-          registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
-          username: _json_key
-          password: ${{ secrets.GCP_SA_KEY }}
-
-      - name: Build Docker image
-        env:
-          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
-        run: |
-          echo "Building Docker image: $IMAGE_NAME"
-          docker build -t $IMAGE_NAME -f Dockerfile .
-
-      - name: Push Docker image to Artifact Registry
-        env:
-          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
-        run: |
-          echo "Pushing Docker image: $IMAGE_NAME"
-          docker push $IMAGE_NAME
+#      - name: Docker Auth
+#        id: docker-auth
+#        uses: 'docker/login-action@v3'
+#        with:
+#          registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
+#          username: _json_key
+#          password: ${{ secrets.GCP_SA_KEY }}
+#
+#      - name: Build Docker image
+#        env:
+#          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
+#        run: |
+#          echo "Building Docker image: $IMAGE_NAME"
+#          docker build -t $IMAGE_NAME -f Dockerfile .
+#
+#      - name: Push Docker image to Artifact Registry
+#        env:
+#          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
+#        run: |
+#          echo "Pushing Docker image: $IMAGE_NAME"
+#          docker push $IMAGE_NAME
 
       - name: Create or Update Config Secret in Secret Manager
         run: |
@@ -110,7 +110,7 @@ jobs:
 
       - name: Deploy to Cloud Run
         env:
-          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
+          IMAGE_NAME: ${{ env.IMAGE_LAST_PATH }}
         run: |
           echo "Deploying image $IMAGE_NAME to Cloud Run service ${{ env.SERVICE_NAME }}"
           gcloud run deploy ${{ env.SERVICE_NAME }} \
@@ -120,7 +120,7 @@ jobs:
             --allow-unauthenticated \
             --port 8080 \
             --set-secrets /app/config.yaml=${{ env.SERVICE_NAME }}:latest \
-            --set-env=PATH_CONFIG=/app \
+            --set-env-vars PATH_CONFIG=/app \
             --project ${{ env.GCP_PROJECT_ID }} \
             --quiet
           echo "Deployment to ${{ env.SERVICE_NAME }} completed."
