--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -116,10 +116,10 @@ jobs:
             --platform managed \
             --allow-unauthenticated \
             --port 8080 \
-            --add-volume name=config-volume,secret=${{ env.SERVICE_NAME }} \
-            --volume-mount name=config-volume,mount-path=/app/config.yaml \
-            --set-secrets /app/config.yaml=${{ env.SERVICE_NAME }}:latest \
+            --add-volume name=config,secret=${{ env.SERVICE_NAME }} \
+            --volume-mount name=config,mount-path=/app/config.yaml \
             --project ${{ env.GCP_PROJECT_ID }} \
             --quiet
           echo " --set-env-vars PATH_CONFIG=/app \"
+          echo "   --set-secrets /app/config.yaml=${{ env.SERVICE_NAME }}:latest \ "
           echo "Deployment to ${{ env.SERVICE_NAME }} completed."
