--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -62,52 +62,52 @@ jobs:
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
 
-#      - name: Configure Docker
-#        run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev --quiet
-#
-#      - name: Docker Auth
-#        id: docker-auth
-#        uses: 'docker/login-action@v3'
-#        with:
-#          registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
-#          username: _json_key
-#          password: ${{ secrets.GCP_SA_KEY }}
-#
-#      - name: Build Docker image
-#        env:
-#          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
-#        run: |
-#          echo "Building Docker image: $IMAGE_NAME"
-#          docker build -t $IMAGE_NAME -f Dockerfile .
-#
-#      - name: Push Docker image to Artifact Registry
-#        env:
-#          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
-#        run: |
-#          echo "Pushing Docker image: $IMAGE_NAME"
-#          docker push $IMAGE_NAME
-#
-#      - name: Create or Update Config Secret in Secret Manager
-#        run: |
-#          echo "Checking for secret: ${{ env.SERVICE_NAME }} in project ${{ env.GCP_PROJECT_ID }}"
-#          if ! gcloud secrets describe ${{ env.SERVICE_NAME }} --project="${{ env.GCP_PROJECT_ID }}" --quiet &> /dev/null; then
-#            echo "Secret ${{ env.SERVICE_NAME }} does not exist. Creating..."
-#            gcloud secrets create ${{ env.SERVICE_NAME }} \
-#              --replication-policy="automatic" \
-#              --project="${{ env.GCP_PROJECT_ID }}" --quiet
-#          else
-#            echo "Secret ${{ env.SERVICE_NAME }} already exists."
-#          fi
-#          
-#          echo "Updating secret version for ${{ env.SERVICE_NAME }}"
-#          echo -n "${{ secrets.CONFIG_YAML }}" | gcloud secrets versions add ${{ env.SERVICE_NAME }} \
-#            --data-file=- \
-#            --project="${{ env.GCP_PROJECT_ID }}" --quiet
-#          echo "Latest version of secret ${{ env.SERVICE_NAME }} updated."
+      - name: Configure Docker
+        run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev --quiet
+
+      - name: Docker Auth
+        id: docker-auth
+        uses: 'docker/login-action@v3'
+        with:
+          registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
+          username: _json_key
+          password: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Build Docker image
+        env:
+          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
+        run: |
+          echo "Building Docker image: $IMAGE_NAME"
+          docker build -t $IMAGE_NAME -f Dockerfile .
+
+      - name: Push Docker image to Artifact Registry
+        env:
+          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
+        run: |
+          echo "Pushing Docker image: $IMAGE_NAME"
+          docker push $IMAGE_NAME
+
+      - name: Create or Update Config Secret in Secret Manager
+        run: |
+          echo "Checking for secret: ${{ env.SERVICE_NAME }} in project ${{ env.GCP_PROJECT_ID }}"
+          if ! gcloud secrets describe ${{ env.SERVICE_NAME }} --project="${{ env.GCP_PROJECT_ID }}" --quiet &> /dev/null; then
+            echo "Secret ${{ env.SERVICE_NAME }} does not exist. Creating..."
+            gcloud secrets create ${{ env.SERVICE_NAME }} \
+              --replication-policy="automatic" \
+              --project="${{ env.GCP_PROJECT_ID }}" --quiet
+          else
+            echo "Secret ${{ env.SERVICE_NAME }} already exists."
+          fi
+          
+          echo "Updating secret version for ${{ env.SERVICE_NAME }}"
+          echo -n "${{ secrets.CONFIG_YAML }}" | gcloud secrets versions add ${{ env.SERVICE_NAME }} \
+            --data-file=- \
+            --project="${{ env.GCP_PROJECT_ID }}" --quiet
+          echo "Latest version of secret ${{ env.SERVICE_NAME }} updated."
 
       - name: Deploy to Cloud Run
         env:
-          IMAGE_NAME: ${{ env.IMAGE_LAST_PATH }}
+          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
         run: |
           echo "Deploying image $IMAGE_NAME to Cloud Run service ${{ env.SERVICE_NAME }}"
           gcloud run deploy ${{ env.SERVICE_NAME }} \
