--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -223,6 +223,8 @@ jobs:
             --update-secrets=/app/auth.json=projects/671107607354/secrets/gcp-auth:latest \
             --set-env-vars PATH_CONFIG=/configs \
             --project ${{ env.GCP_PROJECT_ID }} \
+            --no-invoker-iam-check \
+            --allow-unauthenticated \
             --quiet
           echo " --set-env-vars PATH_CONFIG=/app \
             --add-volume name=config,type=secret,secret=${{ env.SERVICE_NAME }} \
